--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 	<name>native-keystore-testing</name>
 
 	<properties>
+		<maven.compiler.source>17</maven.compiler.source>
+	        <maven.compiler.target>17</maven.compiler.target>
 		<java.version>17</java.version>
 	</properties>
 
@@ -22,6 +24,21 @@
 				<artifactId>native-maven-plugin</artifactId>
 				<version>0.9.27</version>
 			</plugin>
+			<plugin>
+      <!-- Build an executable JAR -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.3.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>org.matthenry87.nativekeystoretesting.NativeKeystoreTestingApplication</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
 		</plugins>
 	</build>
 
