--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
                 <groupId>org.graalvm.buildtools</groupId>
                 <artifactId>native-maven-plugin</artifactId>
                 <version>0.9.27</version>
+                <configuration>
+                    <buildArgs>
+                        <arg>-H:+TraceSecurityServices</arg>
+                    </buildArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <!-- Build an executable JAR -->
