--enable-all-security-services

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
                 <configuration>
                     <buildArgs>
                         <arg>-H:+TraceSecurityServices</arg>
+                        <arg>--enable-all-security-services</arg>
                     </buildArgs>
                 </configuration>
             </plugin>
