Fix hint for com.sun.crypto.provider.CipherForKeyProtector

--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -29,6 +29,6 @@
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
 {
-  "name":"CipherForKeyProtector"
+  "name":"com.sun.crypto.provider.CipherForKeyProtector"
 }
 ]
